name:                 irc-dcc
version:              1.0.0
synopsis:             A DCC message parser and helper library for IRC clients
description:          DCC (Direct Client-to-Client) is an IRC sub-protocol for
                      establishing and maintaining direct connections to
                      exchange messages and files.
                      .
                      See <http://www.irchelp.org/irchelp/rfc/ctcpspec.html> for
                      more details.
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/JanGe/irc-dcc
bug-reports:          https://github.com/JanGe/irc-dcc/issues
author:               Jan Gerlinger
maintainer:           git@jangerlinger.de
category:             Network
-- copyright:
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Network.IRC.DCC
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , attoparsec
                      , binary
                      , bytestring
                      , io-streams
                      , iproute
                      , irc-ctcp
                      , network
                      , path
                      , polyparse
                      , unix
                      , utf8-string
  default-language:     Haskell2010

test-suite tests
  hs-source-dirs:       tests
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0
  build-depends:        base >= 4.7 && < 5
                      , tasty
                      , tasty-hspec
                      , hspec-attoparsec
                      , attoparsec
                      , irc-dcc
                      , bytestring
                      , iproute
                      , network
                      , path
                      , utf8-string
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/JanGe/irc-dcc.git
